--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1681,7 +1681,7 @@ div#mCSB_1_container{
 
 .search-field .outer-container .search-area{
   position: relative;
-  display: block;
+  display: none;
   background: #fff;
   padding: 40px 40px;
   box-shadow: 0px 15px 60px 0px rgba(0, 0, 0, 0.10);
@@ -3940,6 +3940,21 @@ div#mCSB_1_container{
   display: none;
 }
 
+.main-footer {
+  position: relative;
+  overflow: hidden;
+}
+
+.footer-bg {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: auto;
+  opacity: 0.05; /* adjust based on how visible you want it */
+  z-index: 0;
+  pointer-events: none;
+}
 
 
 /*** 
@@ -12317,3 +12332,6 @@ div#mCSB_1_container{
   margin-left: 8px;
   top: 2px;
 }
+
+
+
